--- a/animation.css
+++ b/animation.css
@@ -140,13 +140,16 @@ body{
 
 .flag{
     position: absolute;
-    bottom: 190px;
+    bottom: 178px;
     transform: translateX(-50%);
-    left: 59%;
+    left: 50%;
     z-index: 2;
 }
 .flag img{
+    position: absolute;
     height: 100px;
     width: 100px;
+    left: 80px;
+    bottom: 20px;
 }
 
